--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,8 @@
     <h1><%=post.title%></h1>
     <p>
     <%=post.content+ " ..."%> 
-    <a href="/posts/<%=post.title%>">Read More</a>
+    <a href="/posts/<%=post._id%>">Read More</a>
+    <a href="/posts/edit/<%=post._id%>">edit</a>
     </p>
 
 
